@@ -1,39 +1,42 @@
 package br.com.connectService.service;
 
+import br.com.connectService.dto.ServicoDetalheDTO;
 import br.com.connectService.dto.ServicoResumoDTO;
 import br.com.connectService.entity.Servico;
 import br.com.connectService.entity.StatusServico;
+import br.com.connectService.exception.ServicoNotFoundException;
+import br.com.connectService.mapper.ServicoMapper;
 import br.com.connectService.repository.ServicoRepository;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ServicoService {
 
     private final ServicoRepository servicoRepository;
-
-    public ServicoService(ServicoRepository servicoRepository) {
-        this.servicoRepository = servicoRepository;
-    }
+    private final ServicoMapper servicoMapper;
 
     @Transactional(readOnly = true)
     public List<ServicoResumoDTO> listarDisponiveis() {
-        List<Servico> servicos = servicoRepository.findByStatus(StatusServico.AGUARDANDO_ACEITE);
-        return servicos.stream()
-                .map(this::converterParaResumo)
-                .collect(Collectors.toList());
+        return servicoRepository
+                .findByStatus(StatusServico.AGUARDANDO_ACEITE)
+                .stream()
+                .map(servicoMapper::toResumoDTO)
+                .toList();
     }
 
-    private ServicoResumoDTO converterParaResumo(Servico servico) {
-        return new ServicoResumoDTO(
-                servico.getId(),
-                servico.getTipoServico(),
-                servico.getDataHora(),
-                servico.getLocalizacao(),
-                servico.getValorLiquido(),
-                servico.getStatus()
-        );
+    @Transactional(readOnly = true)
+    public ServicoDetalheDTO buscarPorId(Long id) {
+        Servico servico = servicoRepository
+                .findById(id)
+                .orElseThrow(() ->
+                        new ServicoNotFoundException("Serviço ID: " + id + " não encontrado"));
+
+        return servicoMapper.toDetalheDTO(servico);
     }
 }
